--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/websaite#">
 	<meata charet="utf8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="robots" content="noindex,nofollow">
@@ -14,6 +14,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js" charset="utf-8"></script>
 	<title>owl</title>
+	<meta property="og:url" content="https://ryou-official.github.io/owl/" />
+	<meta property="og:title" content="about olw" />
+	<meta property="og:type" content="website">
+	<meta property="og:description" content="We are necessary for human life. Because we are very smart. Pleas leave it to us if you need help." />
+	<meta property="og:image" content="ryou-official.github.io_owl_" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@official_ryou" />
+	<meta property="og:locale" content="ja_JP" />
 </head>
 
 <body>
