--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 	<script type="text/javascript" src="script.js" charset="utf-8"></script>
 	<title>owl</title>
 	<meta property="og:url" content="https://ryou-official.github.io/owl/">
-	<meta property="og:title" content="about olw">
+	<meta property="og:title" content="olw">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="ryou-official.github.io_owl_">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@official_ryou">
 	<meta property="og:locale" content="ja_JP">
