--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<meta property="og:title" content="olw">
 	<meta property="og:type" content="website">
 	<meta name="twitter:card" content="summary_large_image">
+	<meta property="og:image" content="ryou-official.github.io_owl_">
 	<meta name="twitter:site" content="@official_ryou">
 	<meta property="og:locale" content="ja_JP">
 </head>
