--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja" prefix="og: http://ogp.me/ns#">
 
-<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/websaite#">
+<head>
 	<meata charet="utf8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="robots" content="noindex,nofollow">
@@ -17,8 +17,8 @@
 	<meta property="og:url" content="https://ryou-official.github.io/owl/">
 	<meta property="og:title" content="olw">
 	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="ryou's room">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta property="og:image" content="ryou-official.github.io_owl_">
 	<meta name="twitter:site" content="@official_ryou">
 	<meta property="og:locale" content="ja_JP">
 </head>
