--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" prefix="og: http://ogp.me/ns#">
+<html>
 
 <head>
 	<meata charet="utf8">
@@ -14,13 +14,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js" charset="utf-8"></script>
 	<title>owl</title>
-	<meta property="og:url" content="https://ryou-official.github.io/owl/">
-	<meta property="og:title" content="olw">
-	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="ryou's room">
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@official_ryou">
-	<meta property="og:locale" content="ja_JP">
 </head>
 
 <body>
